...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="BeVietnam-Medium" family="Be Vietnam" pointSize="17"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" name="BeVietnam-Regular" family="Be Vietnam" pointSize="17"/>
                                        <state key="normal" title="Sign up">
                                            <color key="titleColor" red="0.78535639430000004" green="0.52944453130000002" blue="0.84267407660000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        </state>
...
                                                        <color key="backgroundColor" name="Primary Gray Colour"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="firstName"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="34" id="cgM-GQ-bpg">
...
                                                        <color key="backgroundColor" name="Primary Gray Colour"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="lastName"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="34" id="zJa-WR-BT2">
...
                                                        <color key="backgroundColor" name="Primary Gray Colour"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="emailSignUp"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="34" id="wg1-NF-fyc">
...
                                                        <color key="backgroundColor" name="Primary Gray Colour"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="passwordSignUp"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="34" id="Y28-9h-BOo">
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="BeVietnam-Medium" family="Be Vietnam" pointSize="17"/>
                                        <state key="normal" title="Create Account">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                                        <color key="backgroundColor" name="Primary Gray Colour"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="emailLogin"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="34" id="7Dv-KO-nxz">
...
                                                        <color key="backgroundColor" name="Primary Gray Colour"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="passwordLogin"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="34" id="j29-1P-1Le">
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="BeVietnam-Medium" family="Be Vietnam" pointSize="17"/>
                                        <state key="normal" title="Log in">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                <rect key="frame" x="0.0" y="64" width="414" height="749"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <searchBar key="tableHeaderView" contentMode="redraw" searchBarStyle="minimal" placeholder="Search for ingredients" translucent="NO" id="OHv-hZ-U5M">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
...
                                </connections>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What are your ingredients?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zyK-dC-OLE">
                                <rect key="frame" x="97.5" y="435.5" width="219.5" height="25"/>
                                <fontDescription key="fontDescription" name="BeVietnam-Regular" family="Be Vietnam" pointSize="17"/>
...
                        <viewLayoutGuide key="safeArea" id="TaO-oc-rTh"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="A0V-tZ-z2r"/>
                    <navigationItem key="navigationItem" id="82h-vp-Oa7"/>
                    <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Favourites or Bookmarks:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMP-we-x9F">
