import UIKit
import Dev_Pod
import  DropDown

class HomeViewController: UIViewController {
    var data: [String] = ["Sugar", "Salt", "Cocoa Butter", "Milk",
                          "Vanilla Essence", "Egg", "Fish", "Raisins",
                          "Tomato", "Water", "Baking Soda", "Oil", "Flour"]
    var dataFiltered: [String] = []
    var dropButton = DropDown()
    var username = ""
    @IBOutlet weak var tableView: UITableView!
    @IBOutlet weak var recipeSearchBar: UISearchBar!
...
