...
        //Check that all fields are filled in
        let email = emailTextField.text?.trimmingCharacters(in: .whitespacesAndNewlines)
        let password = passwordTextField.text?.trimmingCharacters(in: .whitespacesAndNewlines)
        if email == "" {
            Utilities.styleErrorTextField(emailTextField)
            LoginAnimations.shakeTextfield(emailTextField)
            return "Please fill in all fields"
        }
        if password == "" {
            Utilities.styleErrorTextField(passwordTextField)
            LoginAnimations.shakeTextfield(passwordTextField)
            return "Please fill in all fields"
        }        //Check if password secure
...
