...
                 and password: String, complete: @escaping ( _ error: String) -> Void) {
        var errorMessage = ""
        Auth.auth().createUser(withEmail: email, password: password) { (result, err) in
        //Check for errors
            if err != nil {
                //There was an error creating the user
                errorMessage = "Error creating user"
                complete(errorMessage)
            } else {
                //User was created successfully, now store the first name and last name
                let database = Firestore.firestore()
                database.collection("users").addDocument(data: ["firstname": firstName,
                                                                "lastname": lastName,
...
